tests/samples/negative/traits/trait_predicate_forward_missing_bound.ax
module trait_predicate_forward_missing_bound;

trait Reader {
    fn read(self: &Self) -> i32;
}

fn use_reader<T>(value: T) -> i32 where T: Reader {
    return 0;
}

fn forward_reader<T>(value: T) -> i32 {
    return use_reader<T>(value);
}

fn main() -> i32 {
    return 0;
}
